src/objects/Device__c.object
<CustomObject>
    <fields>
        <fullName>Google_TA_Approval_Status__c</fullName>
        <label>Google TA Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Google_TA_Comments__c</fullName>
        <label>Google TA Comments</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HAC_RF_Interface__c</fullName>
        <description>From NPI field, HAC_RF_Interface</description>
        <inlineHelpText>From NPI field, HAC_RF_Interface</inlineHelpText>
        <label>HAC RF Interface</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HAC_TCoil__c</fullName>
        <description>From NPI field, HAC_TCoil</description>
        <inlineHelpText>From NPI field, HAC_TCoil</inlineHelpText>
        <label>HAC TCoil</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HDMI_applications__c</fullName>
        <formula>IF (ISPICKVAL(IP_HDMI_Capabilities__c, &quot;HDMI w/ Trademark use w/ HDCP&quot;), &quot;HDMI(#82SF00004226)&quot; &amp; BR() &amp;  &quot;HDCP License Keys (#82SF00002795) &quot;, &quot;&quot;)&amp; 
IF (ISPICKVAL(IP_HDMI_Capabilities__c, &quot;HDMI w/ Trademark use w/out HDCP&quot;), &quot;HDMI(#82SF00001997)&quot; &amp; BR() , &quot;&quot;)&amp; 
IF (ISPICKVAL(IP_HDMI_Capabilities__c, &quot;HDMI w/out Trademark use w/ HDCP&quot;), &quot;HDMI(#82SF00004973)&quot; &amp; BR() &amp;  &quot;HDCP License Keys (#82SF00002795)&quot; , &quot;&quot;)&amp; 
IF (ISPICKVAL(IP_HDMI_Capabilities__c, &quot;HDMI w/out Trademark use w/out HDCP&quot;), &quot;HDMI(#82SF00004262)&quot; &amp; BR() , &quot;&quot;)</formula>
        <label>HDMI applications</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hardware_Provided__c</fullName>
        <label>Hardware Provided?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IP_Applications_Cap__c</fullName>
        <formula>IF( INCLUDES (IP_Cap__c, &quot;Camera&quot;), &quot;Kodak(#82SF00002090)&quot; &amp; BR() &amp; &quot;Flashpoint(82SF00006274)&quot; &amp; BR(),&quot;&quot;)&amp; 
IF( INCLUDES(IP_Cap__c, &quot;AAC&quot;),&quot;Coding Tech(#82SF00000572)&quot; &amp; BR() &amp; &quot;Dolby(#82SF00000693)&quot; &amp; BR() &amp; &quot;Fraunhofer(#82SF00004495)&quot; &amp; BR() , &quot;&quot;)&amp; 
IF( INCLUDES(IP_Cap__c, &quot;HSDPA&quot;),&quot;DoCoMo(#82SF00002911)&quot; &amp; BR(),&quot;&quot;)&amp; 
IF( INCLUDES(IP_Cap__c, &quot;MP3&quot;),&quot;Sisvel(#82SF00001947)&quot; &amp; BR() &amp; &quot;Thomson(#82SF00002006)&quot; &amp; BR(), &quot;&quot;)&amp; 
IF( INCLUDES(IP_Cap__c, &quot;MS WMA&quot;),&quot;Msft WMA(#82SF00001258)&quot; &amp; BR(), &quot;&quot;)&amp; 
IF( INCLUDES(IP_Cap__c, &quot;MS WMV&quot;),&quot;Msft WMV(#82SF00001259)&quot; &amp; BR(), &quot;&quot;)&amp; 
IF( INCLUDES(IP_Cap__c, &quot;Internal Multi-Band Antenna&quot;),&quot;Fractus(#82SF00004468)&quot; &amp; BR(), &quot;&quot;)&amp; 
IF( INCLUDES(IP_Cap__c, &quot;GPS&quot;),&quot;ITT(#82SF00006275)&quot; &amp; BR(), &quot;&quot;)&amp; 
IF( INCLUDES(IP_Cap__c, &quot;Java&quot;),&quot;Sun Microsystems(#82SF00000573)&quot; &amp; BR(), &quot;&quot;)&amp; 
IF( INCLUDES(IP_Cap__c, &quot;MPEG4 Encode&quot;), &quot;MPEG LA Encode(#82SF00002774)&quot; &amp; BR(), &quot;&quot;)&amp;
IF( INCLUDES(IP_Cap__c, &quot;MPEG4 Decode&quot;), &quot;MPEG LA Decode(#82SF00002775)&quot; &amp; BR(), &quot;&quot;)&amp;
IF (INCLUDES(IP_Cap__c, &quot;Microsoft WMDRM&quot;), &quot;PlayReady - Janus (WMDRM10)(#82SF00001972)&quot; &amp; BR(), &quot;&quot;)&amp; 
IF (INCLUDES(IP_Cap__c, &quot;Svr-assist GPS loc tech(AGPS)(no3g/cdma)&quot;), &quot;Snaptrack(#82SF00004381)&quot; &amp; BR(), &quot;&quot;)&amp; 
IF (INCLUDES(IP_Cap__c, &quot;WAPI Client in WIFI Chips&quot;), &quot;Iwncomm(#82SF00003106)&quot; &amp; BR(), &quot;&quot;)&amp; 
IF (INCLUDES(IP_Cap__c, &quot;Tessera .10/unit&quot;), &quot;Tessera(#82SF00002853)&quot; &amp; BR(), &quot;&quot;)&amp; 
IF (INCLUDES(IP_Cap__c, &quot;Tessera .15/unit&quot;), &quot;Tessera(#82SF00002854)&quot; &amp; BR(), &quot;&quot;)&amp; 
IF (INCLUDES(IP_Cap__c, &quot;Tessera .25/unit&quot;), &quot;Tessera(#82SF00002855)&quot; &amp; BR(), &quot;&quot;)&amp; 
IF (INCLUDES(IP_Cap__c, &quot;Tessera .35/unit&quot;), &quot;Tessera(#82SF00002856)&quot; &amp; BR(), &quot;&quot;)&amp; 
IF (INCLUDES(IP_Cap__c, &quot;Tessera .45/unit&quot;), &quot;Tessera(#82SF00002857)&quot; &amp; BR(), &quot;&quot;)&amp; 
IF (ISPICKVAL(IP_HDMI_Capabilities__c, &quot;HDMI Connector&quot;), &quot;HDMI(#82SF00004262)&quot; &amp; BR(), &quot;&quot;)&amp; 
IF (ISPICKVAL(Platform__c, &quot;Android&quot;), &quot;Smartphone(#82SF00018462)&quot; &amp; BR(), &quot;&quot;)</formula>
        <label>IP_Applications_Cap</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IP_Applications__c</fullName>
        <description>These are the IP applications that you should add to your device</description>
        <formula>CASE(IP_Technology_Region__c, &quot;US - WCDMA (i.e. UMTS)&quot;, 
&quot;Airbiquity(#82SF00002820)&quot; &amp; BR() &amp; &quot; Cingular(#82SF00001949)&quot; &amp; BR() &amp; &quot;Dataquill(#1952)&quot; &amp; BR() &amp; IF(INCLUDES(IP_Cap__c, &quot;Browser (WAP only not Full or HTML)&quot;),&quot;Datascape-MDb(#82SF00001965)&quot; &amp; BR(), &quot;&quot;) &amp; IF(INCLUDES(IP_Cap__c, &quot;MMS&quot;), &quot;Intellect Wireless(#82SF00002087)&quot; &amp; BR(), &quot;&quot;) &amp; IF(INCLUDES(IP_Cap__c, &quot;Touch Screen&quot;), &quot;ADC(82SF00004529)&quot; &amp; BR(), &quot;&quot;) &amp; &quot;MSTG(82SF00004550)&quot; &amp; BR(), 

&quot;US CDMA&quot;, 
&quot;Dataquill(#82SF00001952)&quot; &amp; BR() &amp; IF(INCLUDES(IP_Cap__c, &quot;MMS&quot;), &quot;Intellect Wireless(#82SF00002087)&quot; &amp; BR(), &quot;&quot;) &amp; IF(INCLUDES(IP_Cap__c, &quot;Browser (WAP only not Full or HTML)&quot;), &quot;Datascape-Mdb(#82SF00001965)&quot; &amp; BR(), &quot;&quot;) &amp; IF(INCLUDES(IP_Cap__c, &quot;Touch Screen&quot;), &quot;ADC(82SF00004529)&quot; &amp; BR(), &quot;&quot;) &amp; &quot;MSTG(82SF00004550)&quot; &amp; BR(),  

&quot;US GSM&quot;, 
&quot;Airbiquity (#82SF00002820)&quot; &amp; BR() &amp; &quot;Dataquill(#82SF00001952)&quot; &amp; BR() &amp; IF(INCLUDES(IP_Cap__c, &quot;MMS&quot;), &quot;Intellect Wireless(#82SF00002087)&quot; &amp; BR(), &quot;&quot;) &amp; IF(INCLUDES(IP_Cap__c, &quot;Browser (WAP only not Full or HTML)&quot;), &quot;Datascape-Mdb(#82SF00001965)&quot; &amp; BR(), &quot;&quot;) &amp; IF(INCLUDES(IP_Cap__c, &quot;Touch Screen&quot;), &quot;ADC(82SF00004529)&quot; &amp; BR(), &quot;&quot;), 


&quot;US IDEN&quot;, 
&quot;Airbiquity(#82SF00002820)&quot; &amp; BR() &amp; &quot;Dataquill(#82SF00001952)&quot; &amp; BR() &amp; IF(INCLUDES(IP_Cap__c, &quot;MMS&quot;), &quot;Intellect Wireless(#82SF00002087)&quot; &amp; BR(), &quot;&quot;) &amp; IF(INCLUDES(IP_Cap__c, &quot;Tessera .45/unit&quot;), &quot;Freescale $.45 (#82SF00004415)&quot; &amp; BR(), &quot;&quot;) &amp; IF(INCLUDES(IP_Cap__c, &quot;Browser (WAP only not Full or HTML)&quot;), &quot;Datascape-Iden(#82SF00001953)&quot; &amp; BR(), &quot;&quot;) &amp; IF(INCLUDES(IP_Cap__c, &quot;Touch Screen&quot;), &quot;ADC(82SF00004529)&quot; &amp; BR(), &quot;&quot;), 

&quot;ROW 3G&quot;, 
IF(INCLUDES(IP_Cap__c, &quot;Browser (WAP only not Full or HTML)&quot;), &quot;Datascape-Mdb(#82SF00001965)&quot; &amp; BR(), &quot;&quot;) &amp;  &quot;MSTG(82SF00004550)&quot; &amp; BR(), 

&quot;ROW GSM&quot;, 
IF(INCLUDES(IP_Cap__c, &quot;Browser (WAP only not Full or HTML)&quot;), &quot;Datascape-Mdb(#82SF00001965)&quot; &amp; BR(), &quot;&quot;), 

&quot;ROW CDMA&quot;, 
IF(INCLUDES(IP_Cap__c, &quot;Browser (WAP only not Full or HTML)&quot;), &quot;Datascape-Mdb(#82SF00001965)&quot; &amp; BR(), &quot;&quot;) &amp; &quot;MSTG(82SF00004550)&quot; &amp; BR(),  

&quot;ROW IDEN&quot;, 
IF(INCLUDES(IP_Cap__c, &quot;Browser (WAP only not Full or HTML)&quot;), &quot;Datascape-Iden(#82SF00004468)&quot; &amp; BR(), &quot;&quot;) &amp; IF(INCLUDES(IP_Cap__c, &quot;Tessera .45/unit&quot;), &quot;Freescale $.45 (#82SF00004415)&quot; &amp; BR(), &quot;&quot;) &amp; BR(), 

&quot;&quot; 
)&amp; 
&quot;APM(#82SF00002000)&quot; &amp; BR() &amp; &quot;Alliacense(#82SF00013300)&quot; &amp; BR() &amp; &quot;Classco(#82SF00004530)&quot; &amp; BR() &amp; &quot;Intertrust(#82SF00002088)&quot; &amp; BR() &amp; &quot;Minerva Industries(#82SF00002906)&quot; &amp; BR() &amp; &quot;MLR(#82SF00002779)&quot; &amp; BR() &amp; &quot;Stragent(#82SF00002905)&quot; &amp; BR() &amp; &quot;Tessera(#82SF00002821)&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>These are the IP applications that you should add to your device</inlineHelpText>
        <label>IP Applications</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IP_Cap__c</fullName>
        <description>If this device has these capabilities, select as appropriate.</description>
        <inlineHelpText>If this device has these capabilities, select as appropriate.</inlineHelpText>
        <label>IP Capabilities</label>
        <picklist>
            <picklistValues>
                <fullName>AAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Browser (WAP only not Full or HTML)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Camera</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Freescale Recovery (Tessera $.45)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HSDPA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Multi-Band Antenna</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Java</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Microsoft WMDRM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MP3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MPEG4 Decode</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MPEG4 Encode</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS WMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS WMV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Svr-assist GPS loc tech(AGPS)(no3g/cdma)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tessera .10/unit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tessera .15/unit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tessera .25/unit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tessera .35/unit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tessera .45/unit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Touch Screen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WAPI Client in WIFI Chips</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>IP_HDMI_Capabilities__c</fullName>
        <description>If the device only has the connector, pick HDMI connector.  If the device also has pkg&apos;ing branding, pick HDMI branding.  If the device has the connetor, branded, and encryption, chose HDMI HDCP Encryption</description>
        <inlineHelpText>If the device only has the connector, pick HDMI connector.  If the device also has pkg&apos;ing branding, pick HDMI branding.  If the device has the connetor, branded, and encryption, chose HDMI HDCP Encryption</inlineHelpText>
        <label>IP HDMI Capabilities</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HDMI w/ Trademark use w/ HDCP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HDMI w/ Trademark use w/out HDCP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HDMI w/out Trademark use w/ HDCP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HDMI w/out Trademark use w/out HDCP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IP_Technology_Region__c</fullName>
        <description>Pick the best match for this device. If it&apos;s 3g, but also handles gsm, please pick 3g.</description>
        <inlineHelpText>Pick the best match for this device. If it&apos;s 3g, but also handles gsm, please pick 3g.</inlineHelpText>
        <label>IP Technology &amp; Region</label>
        <picklist>
            <picklistValues>
                <fullName>US - WCDMA (i.e. UMTS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US CDMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US GSM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US IDEN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ROW - WCDMA (i.e. UMTS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ROW GSM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ROW CDMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ROW IDEN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Icon_URL_Name_Usage_Approval_Requirement__c</fullName>
        <label>Icon/URL/Name Usage Approval Requirement</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Initial_LE_Actual_Date__c</fullName>
        <description>From NPI field &quot;Initial_LE_Actual_Date&quot;</description>
        <inlineHelpText>From NPI field &quot;Initial_LE_Actual_Date&quot;</inlineHelpText>
        <label>Initial LE Actual Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Initial_LE_CWV_Date__c</fullName>
        <description>From NPI field &quot;Initial_LE_CWV_Date&quot;</description>
        <inlineHelpText>From NPI field &quot;Initial_LE_CWV_Date&quot;</inlineHelpText>
        <label>Initial LE CWV Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Issues_Risks_Mitigation_Plan__c</fullName>
        <label>Issues/Risks/Mitigation Plan</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LE_CTS_Comments__c</fullName>
        <label>LE CTS Comments</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LE_CTS_Last_SW_Submitted__c</fullName>
        <label>LE CTS Last SW Submitted</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LE_CTS_Software_Checklist__c</fullName>
        <inlineHelpText>This is a link to the document, located on another server</inlineHelpText>
        <label>LE CTS Software Checklist</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>LE_CTS_Submission_Status__c</fullName>
        <label>LE CTS Submission Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Checklist Provided</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent to Google</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LE Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LE_GMS_Comments__c</fullName>
        <label>LE GMS Comments</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LE_GMS_Last_SW_Submitted__c</fullName>
        <label>LE GMS Last SW Submitted</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LE_GMS_Software_Checklist__c</fullName>
        <inlineHelpText>This is a link to the document, located on another server</inlineHelpText>
        <label>LE GMS Software Checklist</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>LE_GMS_Submission_Status__c</fullName>
        <description>The status of this device&apos;s GMS submission in the Google Technical Acceptance process</description>
        <inlineHelpText>The status of this device&apos;s GMS submission in the Google Technical Acceptance process</inlineHelpText>
        <label>LE GMS Submission Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Checklist Provided</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent to Google</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LE__c</fullName>
        <description>Carrier/region Lab Entry integration date</description>
        <inlineHelpText>Mapped from NPI &quot;LE CWV Date&quot;</inlineHelpText>
        <label>LE Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_PC_Review__c</fullName>
        <description>Mapped from NPI field &quot;Last PC Review&quot;</description>
        <inlineHelpText>Mapped from NPI field &quot;Last PC Review&quot;</inlineHelpText>
        <label>Last PC Review</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Revised_by_NPI_record__c</fullName>
        <description>Last person to revise the NPI record; mapped to NPI field &quot;Last_Revised_by&quot;</description>
        <inlineHelpText>Last person to revise the NPI record; mapped to NPI field &quot;Last_Revised_by&quot;</inlineHelpText>
        <label>Last Revised by (NPI record)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Launch_Addendum_Comments__c</fullName>
        <label>Launch Addendum Comments</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Launch_Addendum_Executed_by_Google__c</fullName>
        <label>Launch Addendum Executed by Google</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Launch_Addendum_Executed_by_MOT__c</fullName>
        <inlineHelpText>Enter the link to the location of the Launch Addendum Executed by Motorola document.</inlineHelpText>
        <label>Launch Addendum Executed by MOT</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Launch_Addendum_ID__c</fullName>
        <label>Launch Addendum ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Launch_Addendum_Status__c</fullName>
        <description>The status of the launch addendum</description>
        <inlineHelpText>The status of the launch addendum</inlineHelpText>
        <label>Launch Addendum Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Template Provided</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent to Google</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Motorola Executed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Authorization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Google Executed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Launch_Addendum_Template__c</fullName>
        <inlineHelpText>This is a link to the document, located on another server</inlineHelpText>
        <label>Launch Addendum Template</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Launch_Addendum__c</fullName>
        <label>Launch Addendum</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Launch_CFC_Site__c</fullName>
        <description>From NPI field &quot;Launch_CFC_Sites&quot;</description>
        <inlineHelpText>From NPI field &quot;Launch_CFC_Sites&quot;</inlineHelpText>
        <label>Launch CFC Site</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Launch_MFG_Site__c</fullName>
        <description>From NPI field &quot;Launch_Mfg_Sites&quot;</description>
        <inlineHelpText>From NPI field &quot;Launch_Mfg_Sites&quot;</inlineHelpText>
        <label>Launch MFG Site</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Device_for_MOTOREADY__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Lead Device for MOTOREADY</inlineHelpText>
        <label>Lead Device for MOTOREADY</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MAPS_Versions__c</fullName>
        <description>MAPS version, from NPI</description>
        <inlineHelpText>MAPS version, from NPI</inlineHelpText>
        <label>MAPS Version</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MGate__c</fullName>
        <description>MGate, based on NPI</description>
        <inlineHelpText>MGate, based on NPI</inlineHelpText>
        <label>MGate</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOL_Manager__c</fullName>
        <description>MOL Manager, from NPI</description>
        <inlineHelpText>MOL Manager, from NPI</inlineHelpText>
        <label>MOL Manager</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOTOREADY_Preload_Program_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MOTOREADY Preload Program Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Devices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MOT_GTAM_Email__c</fullName>
        <description>Integrates via Informatic to NPI field GTAM_Email</description>
        <inlineHelpText>Motorola / Google Technical Account Manager Email</inlineHelpText>
        <label>MOT/Google Technical Account Mgr Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>MOT_GTAM__c</fullName>
        <description>Integrates via Informatic to NPI field GTAM</description>
        <inlineHelpText>Motorola / Google Technical Account Manager</inlineHelpText>
        <label>MOT/Google Technical Account Mgr</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Region__c</fullName>
        <description>Integrates via Informatic to NPI field SA_Region</description>
        <label>Market Region</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Messaging_Types__c</fullName>
        <description>From NPI field &quot;Messaging Types&quot;</description>
        <inlineHelpText>From NPI field &quot;Messaging Types&quot;</inlineHelpText>
        <label>Messaging Types</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Microgen_Countries__c</fullName>
        <label>Microgen Countries</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MotoReady_Accomplishments__c</fullName>
        <label>Accomplishments</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MotoReady_Device_Status__c</fullName>
        <description>Pertaining to Device Risk Flag</description>
        <inlineHelpText>Pertaining to Device Risk Flag</inlineHelpText>
        <label>MotoReady Device Status</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NO_SW_BOM_Used_CRIS_process__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This device went through our legacy CRIS Royalty Accounting Process. No SW BOM was created.</inlineHelpText>
        <label>NO SW BOM: Used CRIS process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NPI_Family_ID__c</fullName>
        <description>The Product Family Key ID as referenced in NPI</description>
        <inlineHelpText>The Product Family Key ID as referenced in NPI</inlineHelpText>
        <label>NPI Product Family ID</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPI_Full_Sales_Model_Name__c</fullName>
        <inlineHelpText>The Full Product/Region/Country/Customer direct from NPI... VISIBLE TO ADMIN LAYOUT ONLY</inlineHelpText>
        <label>NPI Full Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Navigation_Control__c</fullName>
        <description>From NPI, &quot;Navigation Control&quot; field</description>
        <inlineHelpText>From NPI, &quot;Navigation Control&quot; field</inlineHelpText>
        <label>Navigation Control</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_12_Prelim_DevApps__c</fullName>
        <description>How many DevApps are there in Item State 12 - Prelim.</description>
        <inlineHelpText>How many DevApps are there in Item State 12 - Prelim.</inlineHelpText>
        <label>Number of 12 - Prelim DevApps</label>
        <summaryFilterItems>
            <field>DeviceApplicationAssoc__c.App_Item_State__c</field>
            <operation>equals</operation>
            <value>12 - Prelim</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>DeviceApplicationAssoc__c.Include_in_BOM__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>DeviceApplicationAssoc__c.Device__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_32_Controlled_DevApps__c</fullName>
        <description>How many DevApps are there in Item State 32 - Controlled.</description>
        <inlineHelpText>How many DevApps are there in Item State 32 - Controlled.</inlineHelpText>
        <label>Number of 32 - Controlled DevApps</label>
        <summaryFilterItems>
            <field>DeviceApplicationAssoc__c.App_Item_State__c</field>
            <operation>equals</operation>
            <value>32 - Controlled</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>DeviceApplicationAssoc__c.Include_in_BOM__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>DeviceApplicationAssoc__c.Device__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_35_Full_Release_DevApps__c</fullName>
        <description>How many DevApps are there in Item State 35 - Full Release.</description>
        <inlineHelpText>How many DevApps are there in Item State 35 - Full Release.</inlineHelpText>
        <label>Number of 35 - Full Release DevApps</label>
        <summaryFilterItems>
            <field>DeviceApplicationAssoc__c.App_Item_State__c</field>
            <operation>equals</operation>
            <value>35 - Full Release</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>DeviceApplicationAssoc__c.Include_in_BOM__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>DeviceApplicationAssoc__c.Device__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Apps_Approved_on_BOM__c</fullName>
        <description>Number of Apps AIF-Approved on BOM</description>
        <inlineHelpText>Number of Apps AIF-Approved on BOM</inlineHelpText>
        <label>Approved Apps on BOM</label>
        <summaryFilterItems>
            <field>DeviceApplicationAssoc__c.Approval_Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>DeviceApplicationAssoc__c.Include_in_BOM__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>DeviceApplicationAssoc__c.Device__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Apps_on_BOM__c</fullName>
        <description>Total number of Apps added to this BOM  
(Include on BOM = TRUE)</description>
        <inlineHelpText>Total number of Apps added to this BOM  
(Include on BOM = TRUE)</inlineHelpText>
        <label>Total Number of Apps on BOM</label>
        <summaryFilterItems>
            <field>DeviceApplicationAssoc__c.Include_in_BOM__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>DeviceApplicationAssoc__c.Device__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Sales_Models__c</fullName>
        <defaultValue>0</defaultValue>
        <description>How many Sales Models does this Device use. Used for Item State and Fully Approved automation.</description>
        <inlineHelpText>How many Sales Models does this Device use. Used for Item State and Fully Approved automation.</inlineHelpText>
        <label>Number of Sales Models</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_days_allotted_for_approval__c</fullName>
        <formula>Requested_Date_for_Google_TA__c - Date_GMS_SW_Checklist_Sent_to_Google__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of days allotted for approval</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_days_since_complete_submission__c</fullName>
        <formula>TODAY()  - Date_GMS_SW_Checklist_Sent_to_Google__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of days since complete submission</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ODM_Device__c</fullName>
        <defaultValue>false</defaultValue>
        <description>From NPI, checked if this is an ODM device</description>
        <inlineHelpText>From NPI, checked if this is an ODM device</inlineHelpText>
        <label>ODM Device</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ODM_Name__c</fullName>
        <description>Mapped from NPI field &quot;Design Center&quot;</description>
        <inlineHelpText>Mapped from NPI field &quot;Design Center&quot;</inlineHelpText>
        <label>ODM Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OTA_Soak_Start_Actual_Date__c</fullName>
        <description>From NPI field &quot;OTA_Soak_Start_Actual_Date&quot;</description>
        <inlineHelpText>From NPI field &quot;OTA_Soak_Start_Actual_Date&quot;</inlineHelpText>
        <label>OTA Soak Start Actual Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OTA_Soak_Start_CWV_Date__c</fullName>
        <description>From NPI field &quot;OTA_Soak_Start_CWV_Date&quot;</description>
        <inlineHelpText>From NPI field &quot;OTA_Soak_Start_CWV_Date&quot;</inlineHelpText>
        <label>OTA Soak Start CWV Date</label>
        <type>DateTime</type>
    </fields>
</CustomObject>